--- a/examples/csharp/Views/Home/Index.cshtml
+++ b/examples/csharp/Views/Home/Index.cshtml
@@ -139,6 +139,25 @@
     <div class="row">
         <div class="col-md-4 portfolio-item">
             <h3>
+                <a href="#">Scene with overlay</a>
+            </h3>
+            <p>Sample image of design applied to a scene object without contrast</p>
+            <img class="img-responsive" src="@Model.SceneWithOverlay" alt="Scene with overlay" title="Scene with overlay" />
+        </div>
+        <div class="col-md-4 portfolio-item">
+            <h3>
+                <a href="#">Scene with multiple overlays</a>
+            </h3>
+            <p>Sample image of design applied to a scene object with contrast</p>
+            <img class="img-responsive" src="@Model.SceneWithMultipleOverlays" alt="Scene with multiple overlays" title="Scene with multiple overlays" />
+        </div>
+    </div>
+    <!-- /.row -->
+    
+    <!-- Projects Row -->
+    <div class="row">
+        <div class="col-md-4 portfolio-item">
+            <h3>
                 <a href="#">Other examples</a>
             </h3>
             <p>Click <a href="/js">here</a> for the JavaScript examples</p>
