--- a/examples/csharp/Views/Home/Index.cshtml
+++ b/examples/csharp/Views/Home/Index.cshtml
@@ -141,14 +141,14 @@
             <h3>
                 <a href="#">Scene with overlay</a>
             </h3>
-            <p>Sample image of design applied to a scene object without contrast</p>
+            <p>Sample image of a single overlay applied to a scene</p>
             <img class="img-responsive" src="@Model.SceneWithOverlay" alt="Scene with overlay" title="Scene with overlay" />
         </div>
         <div class="col-md-4 portfolio-item">
             <h3>
                 <a href="#">Scene with multiple overlays</a>
             </h3>
-            <p>Sample image of design applied to a scene object with contrast</p>
+            <p>Sample image of multiple overlays applied to a scene</p>
             <img class="img-responsive" src="@Model.SceneWithMultipleOverlays" alt="Scene with multiple overlays" title="Scene with multiple overlays" />
         </div>
     </div>
