Added text rendering to c# and js demo's

--- a/examples/csharp/Views/Home/Index.cshtml
+++ b/examples/csharp/Views/Home/Index.cshtml
@@ -158,6 +158,18 @@
     <div class="row">
         <div class="col-md-4 portfolio-item">
             <h3>
+                <a href="#">Scene with text</a>
+            </h3>
+            <p>Sample image of text applied to a scene</p>
+            <img class="img-responsive" src="@Model.SceneWithText" alt="Scene with text" title="Scene with text" />
+        </div>
+    </div>
+    <!-- /.row -->
+    
+    <!-- Projects Row -->
+    <div class="row">
+        <div class="col-md-4 portfolio-item">
+            <h3>
                 <a href="#">Other examples</a>
             </h3>
             <p>Click <a href="/js">here</a> for the JavaScript examples</p>
